--- a/correlation_analysis.ipynb
+++ b/correlation_analysis.ipynb
@@ -56,14 +56,13 @@
     "    correlation_matrix, _ = spearmanr(spearmanr_data, axis=0)\n",
     "    threshold = 0.7\n",
     "    correlation_matrix[np.abs(correlation_matrix) < threshold] = np.nan\n",
-    "    plt.figure(figsize=(10, 8))  # 设置图的大小\n",
+    "    plt.figure(figsize=(10, 8)) \n",
     "    mask = np.tri(*correlation_matrix.shape, k=-1)\n",
     "    correlation_matrix = np.ma.array(correlation_matrix, mask=mask)\n",
     "    sns.heatmap(correlation_matrix, annot=True, cmap=\"coolwarm\", fmt=\".2f\", square=True)\n",
     "    plt.xticks(range(len(column_names)), column_names, rotation=45, horizontalalignment='right')\n",
     "    plt.yticks(range(len(column_names)), column_names)\n",
-    "    # 设置热力图的标题\n",
-    "    plt.title(\"Spearman秩相关系数矩阵\")\n",
+    "    plt.title(\"Spearman\")\n",
     "    rela_class = []\n",
     "    count = -1\n",
     "    rows, cols = np.where(~np.isnan(correlation_matrix))\n",
@@ -137,7 +136,7 @@
     "            feature_dict[feature]['target'] = point_biserial_corr\n",
     "            target_variable_list.append(str(f\"{feature} - target_variable: {point_biserial_corr:.2f}\"))\n",
     "    else:\n",
-    "        for feature in column_names:  # 最后一列是目标变量\n",
+    "        for feature in column_names: \n",
     "            point_biserial_corr, p_value = stats.pointbiserialr(df[feature], target_variable)\n",
     "            feature_dict[feature]['target'] = point_biserial_corr\n",
     "            target_variable_list.append(str(f\"{feature} - target_variable: {point_biserial_corr:.2f}\"))\n",
