--- a/correlation_analysis.ipynb
+++ b/correlation_analysis.ipynb
@@ -36,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def set_feature_dict(column_names,feature_dict):\n",
+    "def set_feature_dict(column_names,feature_dict): # Assigning quantitative information\n",
     "    for feature in column_names:\n",
     "        feature_dict[feature] = {'change_range':0,'correlation': False,'target':0}\n",
     "    return feature_dict"
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def Feature_correlation_analysis(column_names,feature_dict,spearmanr_data):\n",
+    "def Feature_correlation_analysis(column_names,feature_dict,spearmanr_data): # Correlation between features\n",
     "    Feature_correlation_list = []\n",
     "    correlation_matrix, _ = spearmanr(spearmanr_data, axis=0)\n",
     "    threshold = 0.7\n",
@@ -125,7 +125,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def target_correlation_analysis(feature_dict,target_variable,column_names):\n",
+    "def target_correlation_analysis(feature_dict,target_variable,column_names): # Correlation between features and labels\n",
     "    target_variable_list = []\n",
     "    unique_values, counts = np.unique(target_variable.values, return_counts=True)\n",
     "    if unique_values.shape !=(2,):\n",
