--- a/Feature_selection.ipynb
+++ b/Feature_selection.ipynb
@@ -41,20 +41,21 @@
     "    F_copy = copy.deepcopy(F)\n",
     "    flag = 0\n",
     "    num = 0\n",
-    "    for i in range(len(column_names)):\n",
+    "    for i in range(len(column_names)): # Judging the number of low—contributing features\n",
     "        if feature_dict[column_names[i]]['change_range']>=0.1:\n",
     "            num+=1\n",
-    "    if (num/len(column_names))>=0.15:\n",
+    "    if (num/len(column_names))>=0.15: # case1\n",
     "        for i in range(len(rela_class)):\n",
-    "            for metric in rela_class[i]:\n",
+    "            for metric in rela_class[i]: # Removal of features\n",
     "                if feature_dict[metric]['change_range']>=0.5 or feature_dict[metric]['change_range']<=0.1:\n",
     "                    Rela_class_copy[i].remove(metric)\n",
     "                    for j in  Rela_class_copy[i]:\n",
     "                        feature_dict_copy[j]['NOFR'] -=1 \n",
     "        for metric in F:\n",
-    "            if feature_dict[metric]['change_range']<0.1:\n",
+    "            if feature_dict[metric]['change_range']<0.1: # Removal of low—contributing features\n",
     "                F_copy.remove(metric)\n",
     "            elif 0.1<feature_dict[metric]['change_range']<0.5 and -0.3<feature_dict[metric]['target']<0.3 and feature_dict_copy[metric]['NOFR']>0:\n",
+    "                # Filtering features based on correlation \n",
     "                for i in Rela_class_copy:\n",
     "                    for j in i:\n",
     "                        if metric == j:\n",
@@ -71,7 +72,7 @@
     "                    if flag == 1:\n",
     "                        break\n",
     "                flag = 0\n",
-    "    else:\n",
+    "    else: # case2\n",
     "        for i in range(len(rela_class)):\n",
     "            for metric in rela_class[i]:\n",
     "                if feature_dict[metric]['change_range']>=0.1:\n",
