--- a/Feature_selection.ipynb
+++ b/Feature_selection.ipynb
@@ -52,7 +52,7 @@
     "                    for j in  Rela_class_copy[i]:\n",
     "                        feature_dict_copy[j]['NOFR'] -=1 \n",
     "        for metric in F:\n",
-    "            if feature_dict[metric]['change_range']<0.1: # Removal of low—contributing features\n",
+    "            if feature_dict[metric]['change_range']<=0.1: # Removal of low—contributing features\n",
     "                F_copy.remove(metric)\n",
     "            elif 0.1<feature_dict[metric]['change_range']<0.5 and -0.3<feature_dict[metric]['target']<0.3 and feature_dict_copy[metric]['NOFR']>0:\n",
     "                # Filtering features based on correlation \n",
