--- a/Feature_selection.ipynb
+++ b/Feature_selection.ipynb
@@ -59,7 +59,7 @@
     "                for i in Rela_class_copy:\n",
     "                    for j in i:\n",
     "                        if metric == j:\n",
-    "                            flag == 1\n",
+    "                            flag = 1\n",
     "                            change_range = [feature_dict[feature]['change_range'] for feature in i]\n",
     "                            max_change_range = max(change_range)\n",
     "                            max_feature = [feature for feature in i if feature_dict[feature]['change_range'] == max_change_range][0]\n",
@@ -84,7 +84,7 @@
     "                for i in Rela_class_copy:\n",
     "                    for j in i:\n",
     "                        if metric == j:\n",
-    "                            flag == 1\n",
+    "                            flag = 1\n",
     "                            change_range = [feature_dict[feature]['change_range'] for feature in i]\n",
     "                            max_change_range = max(change_range)\n",
     "                            max_feature = [feature for feature in i if feature_dict[feature]['change_range'] == max_change_range][0]\n",
